@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,8 +38,8 @@ import org.polypheny.db.algebra.logical.lpg.LogicalLpgProject;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgTransformer;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgValues;
 import org.polypheny.db.algebra.logical.relational.LogicalModifyCollect;
-import org.polypheny.db.algebra.logical.relational.LogicalProject;
-import org.polypheny.db.algebra.logical.relational.LogicalValues;
+import org.polypheny.db.algebra.logical.relational.LogicalRelProject;
+import org.polypheny.db.algebra.logical.relational.LogicalRelValues;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeFactory;
 import org.polypheny.db.algebra.type.AlgDataTypeField;
@@ -56,7 +56,7 @@ import org.polypheny.db.catalog.entity.logical.LogicalColumn;
 import org.polypheny.db.catalog.entity.logical.LogicalIndex;
 import org.polypheny.db.catalog.entity.physical.PhysicalEntity;
 import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
-import org.polypheny.db.plan.AlgOptCluster;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.plan.volcano.AlgSubset;
 import org.polypheny.db.prepare.Context;
 import org.polypheny.db.rex.RexBuilder;
@@ -126,7 +126,7 @@ public interface Modifiable extends Scannable {
     }
 
 
-    static List<AlgNode> attachPreparedGraphNodeModifyDelete( Modifiable modifiable, AlgOptCluster cluster, Entity nodesTable, Entity nodePropertiesTable, AlgBuilder algBuilder ) {
+    static List<AlgNode> attachPreparedGraphNodeModifyDelete( Modifiable modifiable, AlgCluster cluster, Entity nodesTable, Entity nodePropertiesTable, AlgBuilder algBuilder ) {
         RexBuilder rexBuilder = algBuilder.getRexBuilder();
         AlgDataTypeFactory typeFactory = rexBuilder.getTypeFactory();
 
@@ -134,7 +134,7 @@ public interface Modifiable extends Scannable {
 
         // id = ? && label = ?
         algBuilder
-                .scan( nodesTable )
+                .relScan( nodesTable )
                 .filter(
                         algBuilder.equals(
                                 rexBuilder.makeInputRef( typeFactory.createPolyType( PolyType.VARCHAR, GraphType.ID_SIZE ), 0 ),
@@ -144,7 +144,7 @@ public interface Modifiable extends Scannable {
 
         // id = ?
         algBuilder
-                .scan( nodePropertiesTable )
+                .relScan( nodePropertiesTable )
                 .filter(
                         algBuilder.equals(
                                 rexBuilder.makeInputRef( typeFactory.createPolyType( PolyType.VARCHAR, GraphType.ID_SIZE ), 0 ),
@@ -174,27 +174,27 @@ public interface Modifiable extends Scannable {
         return new LogicalStreamer( alg.getCluster(), alg.getTraitSet(), provider, transformer );
     }
 
-    static List<AlgNode> attachPreparedGraphNodeModifyInsert( Modifiable modifiable, AlgOptCluster cluster, Entity nodesTable, Entity nodePropertiesTable, AlgBuilder algBuilder ) {
+    static List<AlgNode> attachPreparedGraphNodeModifyInsert( Modifiable modifiable, AlgCluster cluster, Entity nodesTable, Entity nodePropertiesTable, AlgBuilder algBuilder ) {
         RexBuilder rexBuilder = algBuilder.getRexBuilder();
         AlgDataTypeFactory typeFactory = rexBuilder.getTypeFactory();
 
         List<AlgNode> inputs = new ArrayList<>();
-        LogicalProject preparedNodes = LogicalProject.create(
-                LogicalValues.createOneRow( cluster ),
+        LogicalRelProject preparedNodes = LogicalRelProject.create(
+                LogicalRelValues.createOneRow( cluster ),
                 List.of(
                         rexBuilder.makeDynamicParam( nonNullGraphId.apply( typeFactory ), 0 ), // id
                         rexBuilder.makeDynamicParam( nonNullText.apply( typeFactory ), 1 ) ), // label
-                nodesTable.getRowType() );
+                nodesTable.getTupleType() );
 
         inputs.add( getModify( nodesTable, preparedNodes, Modify.Operation.INSERT, null, null ) );
 
-        LogicalProject preparedNProperties = LogicalProject.create(
-                LogicalValues.createOneRow( cluster ),
+        LogicalRelProject preparedNProperties = LogicalRelProject.create(
+                LogicalRelValues.createOneRow( cluster ),
                 List.of(
                         rexBuilder.makeDynamicParam( nonNullGraphId.apply( typeFactory ), 0 ), // id
                         rexBuilder.makeDynamicParam( nonNullText.apply( typeFactory ), 1 ), // key
                         rexBuilder.makeDynamicParam( nullableText.apply( typeFactory ), 2 ) ), // value
-                nodePropertiesTable.getRowType() );
+                nodePropertiesTable.getTupleType() );
 
         inputs.add( getModify( nodePropertiesTable, preparedNProperties, Modify.Operation.INSERT, null, null ) );
 
@@ -202,7 +202,7 @@ public interface Modifiable extends Scannable {
     }
 
 
-    static List<AlgNode> attachPreparedGraphEdgeModifyDelete( Modifiable modifiable, AlgOptCluster cluster, Entity edgesTable, Entity edgePropertiesTable, AlgBuilder algBuilder ) {
+    static List<AlgNode> attachPreparedGraphEdgeModifyDelete( Modifiable modifiable, AlgCluster cluster, Entity edgesTable, Entity edgePropertiesTable, AlgBuilder algBuilder ) {
         RexBuilder rexBuilder = algBuilder.getRexBuilder();
         AlgDataTypeFactory typeFactory = rexBuilder.getTypeFactory();
 
@@ -210,7 +210,7 @@ public interface Modifiable extends Scannable {
 
         // id = ?
         algBuilder
-                .scan( edgesTable )
+                .relScan( edgesTable )
                 .filter( algBuilder.equals(
                         rexBuilder.makeInputRef( typeFactory.createPolyType( PolyType.VARCHAR, GraphType.ID_SIZE ), 0 ),
                         rexBuilder.makeDynamicParam( typeFactory.createPolyType( PolyType.VARCHAR, GraphType.ID_SIZE ), 0 ) ) );
@@ -219,7 +219,7 @@ public interface Modifiable extends Scannable {
 
         // id = ?
         algBuilder
-                .scan( edgePropertiesTable )
+                .relScan( edgePropertiesTable )
                 .filter(
                         algBuilder.equals(
                                 rexBuilder.makeInputRef( typeFactory.createPolyType( PolyType.VARCHAR, GraphType.ID_SIZE ), 0 ),
@@ -229,29 +229,29 @@ public interface Modifiable extends Scannable {
     }
 
 
-    static List<AlgNode> attachPreparedGraphEdgeModifyInsert( Modifiable modifiable, AlgOptCluster cluster, Entity edgesTable, Entity edgePropertiesTable, AlgBuilder algBuilder ) {
+    static List<AlgNode> attachPreparedGraphEdgeModifyInsert( Modifiable modifiable, AlgCluster cluster, Entity edgesTable, Entity edgePropertiesTable, AlgBuilder algBuilder ) {
         RexBuilder rexBuilder = algBuilder.getRexBuilder();
         AlgDataTypeFactory typeFactory = rexBuilder.getTypeFactory();
 
         List<AlgNode> inputs = new ArrayList<>();
-        LogicalProject preparedEdges = LogicalProject.create(
-                LogicalValues.createOneRow( cluster ),
+        LogicalRelProject preparedEdges = LogicalRelProject.create(
+                LogicalRelValues.createOneRow( cluster ),
                 List.of(
                         rexBuilder.makeDynamicParam( nonNullGraphId.apply( typeFactory ), 0 ), // id
                         rexBuilder.makeDynamicParam( nullableText.apply( typeFactory ), 1 ), // label
                         rexBuilder.makeDynamicParam( nullableGraphId.apply( typeFactory ), 2 ), // source
                         rexBuilder.makeDynamicParam( nullableGraphId.apply( typeFactory ), 3 ) ), // target
-                edgesTable.getRowType() );
+                edgesTable.getTupleType() );
 
         inputs.add( getModify( edgesTable, preparedEdges, Modify.Operation.INSERT, null, null ) );
 
-        LogicalProject preparedEProperties = LogicalProject.create(
-                LogicalValues.createOneRow( cluster ),
+        LogicalRelProject preparedEProperties = LogicalRelProject.create(
+                LogicalRelValues.createOneRow( cluster ),
                 List.of(
                         rexBuilder.makeDynamicParam( nonNullGraphId.apply( typeFactory ), 0 ), // id
                         rexBuilder.makeDynamicParam( nonNullText.apply( typeFactory ), 1 ), // key
                         rexBuilder.makeDynamicParam( nullableText.apply( typeFactory ), 2 ) ), // value
-                edgePropertiesTable.getRowType() );
+                edgePropertiesTable.getTupleType() );
 
         inputs.add( getModify( edgePropertiesTable, preparedEProperties, Modify.Operation.INSERT, null, null ) );
 
@@ -266,11 +266,6 @@ public interface Modifiable extends Scannable {
 
     static void dropGraphSubstitute( Modifiable modifiable, long allocation ) {
         // we can drop the direct link
-        modifiable.getCatalog().removeAllocAndPhysical( allocation );
-    }
-
-
-    static void dropCollectionSubstitute( Modifiable modifiable, long allocation ) {
         modifiable.getCatalog().removeAllocAndPhysical( allocation );
     }
 
@@ -350,7 +345,7 @@ public interface Modifiable extends Scannable {
             builder.transform( ModelTrait.RELATIONAL, DocumentType.ofRelational(), false, null );
             AlgNode provider = builder.build();
             // right side prepared
-            builder.push( LogicalValues.createOneRow( modify.getCluster() ) );
+            builder.push( LogicalRelValues.createOneRow( modify.getCluster() ) );
 
             builder.project( DocumentType.ofRelational().getFields().stream().map( f -> new RexDynamicParam( f.getType(), f.getIndex() ) ).toList(), DocumentType.ofRelational().getFieldNames() );
 
@@ -366,8 +361,8 @@ public interface Modifiable extends Scannable {
         } else {
             // left side
             AlgNode provider = builder.build();
-            // build scan for right
-            builder.scan( oTable.get() );
+            // build relScan for right
+            builder.relScan( oTable.get() );
             // attach filter for condition
             LogicalStreamer.attachFilter( oTable.get(), builder, provider.getCluster().getRexBuilder(), List.of( 0 ) );
 
@@ -391,7 +386,7 @@ public interface Modifiable extends Scannable {
     static Pair<List<String>, List<RexNode>> replaceUpdates( Pair<List<String>, List<RexNode>> updates, AlgBuilder builder ) {
         builder.documentProject( Pair.zip( updates.left, updates.right ).stream().collect( Collectors.toMap( e -> null, e -> e.right ) ), List.of() );
 
-        return Pair.of( updates.left, updates.right.stream().map( u -> new RexDynamicParam( DocumentType.ofRelational().getFields().get( 1 ).getType(), 1 ) ).collect( Collectors.toList() ) );
+        return Pair.of( updates.left, updates.right.stream().map( u -> (RexNode) new RexDynamicParam( DocumentType.ofRelational().getFields().get( 1 ).getType(), 1 ) ).toList() );
     }
 
 
@@ -492,7 +487,7 @@ public interface Modifiable extends Scannable {
 
 
     default String addIndex( Context context, LogicalIndex index, List<AllocationTable> allocations ) {
-        return allocations.stream().map( a -> addIndex( context, index, a ) ).collect( Collectors.toList() ).get( 0 );
+        return allocations.stream().map( a -> addIndex( context, index, a ) ).toList().get( 0 );
     }
 
 
