@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,8 +18,6 @@ package org.polypheny.db.catalog.snapshot.impl;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,9 +27,10 @@ import java.util.Optional;
 import java.util.TreeSet;
 import java.util.function.BinaryOperator;
 import java.util.stream.Collectors;
+import lombok.EqualsAndHashCode;
 import lombok.NonNull;
 import lombok.Value;
-import org.apache.commons.compress.utils.Lists;
+import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.polypheny.db.algebra.AlgNode;
@@ -51,6 +50,8 @@ import org.polypheny.db.catalog.snapshot.LogicalRelSnapshot;
 import org.polypheny.db.util.Pair;
 
 @Value
+@Slf4j
+@EqualsAndHashCode
 public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
     ImmutableMap<Long, LogicalNamespace> namespaces;
@@ -194,8 +195,10 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
     private ImmutableMap<Long, TreeSet<LogicalColumn>> buildTableColumns() {
         Map<Long, TreeSet<LogicalColumn>> map = new HashMap<>();
-        tables.values().forEach( t -> map.put( t.id, new TreeSet<>( Comparator.comparingInt( a -> a.position ) ) ) );
-        columns.forEach( ( k, v ) -> map.get( v.tableId ).add( v ) );
+        tables.values().forEach( t -> map.put( t.id, new TreeSet<>( ( a, b ) -> a.position == b.position ? (int) (a.id - b.id) : a.position - b.position ) ) ); // while this should not happen, we ensure consistency with this
+        columns.forEach( ( k, v ) -> {
+            map.get( v.tableId ).add( v );
+        } );
         return ImmutableMap.copyOf( map );
     }
 
@@ -229,7 +232,7 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
 
     private ImmutableMap<long[], LogicalKey> buildColumnsKey() {
-        Map<long[], LogicalKey> map = keys.entrySet().stream().collect( Collectors.toMap( e -> e.getValue().columnIds.stream().mapToLong( c -> c ).toArray(), Entry::getValue, getDuplicateError() ) );
+        Map<long[], LogicalKey> map = keys.entrySet().stream().collect( Collectors.toMap( e -> e.getValue().fieldIds.stream().mapToLong( c -> c ).toArray(), Entry::getValue, getDuplicateError() ) );
 
         return ImmutableMap.copyOf( map );
     }
@@ -268,7 +271,7 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
 
     public String getAdjustedName( long namespaceId, String entityName ) {
-        return namespaces.get( namespaceId ).caseSensitive ? entityName : entityName.toLowerCase();
+        return Objects.requireNonNull( namespaces.get( namespaceId ) ).caseSensitive ? entityName : entityName.toLowerCase();
     }
 
 
@@ -280,7 +283,7 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
         if ( name != null ) {
             tables = tables.stream().filter( t -> this.namespaces.get( t.namespaceId ) != null )
                     .filter( t ->
-                            this.namespaces.get( t.namespaceId ).caseSensitive
+                            Objects.requireNonNull( this.namespaces.get( t.namespaceId ) ).caseSensitive
                                     ? t.name.matches( name.toRegex() )
                                     : t.name.matches( name.toRegex().toLowerCase() ) ).toList();
         }
@@ -315,6 +318,7 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
     public @NonNull Optional<LogicalTable> getTables( @Nullable String namespaceName, @NonNull String name ) {
         LogicalNamespace namespace = namespaceNames.get( namespaceName );
 
+        assert namespace != null;
         return Optional.ofNullable( tableNames.get( Pair.of( namespace.id, (namespace.caseSensitive ? name : name.toLowerCase()) ) ) );
     }
 
@@ -350,6 +354,12 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
 
     @Override
+    public @NotNull List<LogicalForeignKey> getForeignKeys() {
+        return foreignKeys.values().asList();
+    }
+
+
+    @Override
     public @NonNull List<LogicalKey> getTableKeys( long tableId ) {
         return Optional.ofNullable( tableKeys.get( tableId ) ).orElse( List.of() );
     }
@@ -365,13 +375,13 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
     public @NonNull List<LogicalColumn> getColumns( Pattern tableName, Pattern columnName ) {
         List<LogicalTable> tables = getTables( null, tableName );
         if ( columnName == null ) {
-            return tables.stream().flatMap( t -> tableColumns.get( t.id ).stream() ).toList();
+            return tables.stream().flatMap( t -> Objects.requireNonNull( tableColumns.get( t.id ) ).stream() ).toList();
         }
 
         return tables
                 .stream()
                 .flatMap( t -> tableColumns.get( t.id ).stream().filter(
-                        c -> namespaces.get( t.namespaceId ).caseSensitive
+                        c -> Objects.requireNonNull( namespaces.get( t.namespaceId ) ).caseSensitive
                                 ? c.name.matches( columnName.toRegex() )
                                 : c.name.toLowerCase().matches( columnName.toLowerCase().toRegex() ) ) ).toList();
 
@@ -430,14 +440,14 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
 
     @Override
     public @NonNull List<LogicalForeignKey> getExportedKeys( long tableId ) {
-        return foreignKeys.values().stream().filter( k -> k.referencedKeyTableId == tableId ).collect( Collectors.toList() );
+        return foreignKeys.values().stream().filter( k -> k.referencedKeyEntityId == tableId ).collect( Collectors.toList() );
     }
 
 
     @Override
     public @NonNull List<LogicalConstraint> getConstraints( long tableId ) {
-        List<Long> keysOfTable = getTableKeys( tableId ).stream().map( t -> t.id ).collect( Collectors.toList() );
-        return constraints.values().stream().filter( c -> keysOfTable.contains( c.keyId ) ).collect( Collectors.toList() );
+        List<Long> keysOfTable = getTableKeys( tableId ).stream().map( t -> t.id ).toList();
+        return constraints.values().stream().filter( c -> keysOfTable.contains( c.keyId ) ).toList();
     }
 
 
@@ -542,96 +552,6 @@ public class LogicalRelSnapshotImpl implements LogicalRelSnapshot {
     @Override
     public @NonNull Optional<LogicalKey> getKey( long id ) {
         return Optional.ofNullable( keys.get( id ) );
-    }
-
-
-    @Override
-    public boolean equals( Object o ) {
-        if ( this == o ) {
-            return true;
-        }
-        if ( o == null || getClass() != o.getClass() ) {
-            return false;
-        }
-
-        LogicalRelSnapshotImpl that = (LogicalRelSnapshotImpl) o;
-
-        if ( !Objects.equals( namespaces, that.namespaces ) ) {
-            return false;
-        }
-        if ( !Objects.equals( namespaceNames, that.namespaceNames ) ) {
-            return false;
-        }
-        if ( !Objects.equals( namespaceCaseSensitive, that.namespaceCaseSensitive ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tables, that.tables ) ) {
-            return false;
-        }
-        if ( !Objects.equals( views, that.views ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableNames, that.tableNames ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tablesNamespace, that.tablesNamespace ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableColumns, that.tableColumns ) ) {
-            return false;
-        }
-        if ( !Objects.equals( columns, that.columns ) ) {
-            return false;
-        }
-        if ( !Objects.equals( columnNames, that.columnNames ) ) {
-            return false;
-        }
-        if ( !Objects.equals( keys, that.keys ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableKeys, that.tableKeys ) ) {
-            return false;
-        }
-        if ( !Objects.equals( columnsKeys.values(), that.columnsKeys.values() ) ) {
-            return false;
-        }
-        if ( columnsKeys.size() != that.columnsKeys.size() || Lists.newArrayList( Pair.zip( columnsKeys.keySet(), that.columnsKeys.keySet() ).iterator() ).stream().anyMatch( p -> !Arrays.equals( p.left, p.right ) ) ) {
-            return false;
-        }
-        if ( !Objects.equals( index, that.index ) ) {
-            return false;
-        }
-        if ( !Objects.equals( constraints, that.constraints ) ) {
-            return false;
-        }
-        if ( !Objects.equals( foreignKeys, that.foreignKeys ) ) {
-            return false;
-        }
-        if ( !Objects.equals( primaryKeys, that.primaryKeys ) ) {
-            return false;
-        }
-        if ( !Objects.equals( keyToIndexes, that.keyToIndexes ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableColumnIdColumn, that.tableColumnIdColumn ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableColumnNameColumn, that.tableColumnNameColumn ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableIdColumnNameColumn, that.tableIdColumnNameColumn ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableConstraints, that.tableConstraints ) ) {
-            return false;
-        }
-        if ( !Objects.equals( tableForeignKeys, that.tableForeignKeys ) ) {
-            return false;
-        }
-        if ( !Objects.equals( nodes, that.nodes ) ) {
-            return false;
-        }
-        return Objects.equals( connectedViews, that.connectedViews );
     }
 
 
