@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.config.Config;
@@ -35,12 +34,12 @@ import org.polypheny.db.docker.DockerContainer;
 import org.polypheny.db.docker.DockerContainer.HostAndPort;
 import org.polypheny.db.docker.DockerInstance;
 import org.polypheny.db.docker.DockerManager;
+import org.polypheny.db.docker.models.DockerInstanceInfo;
 import org.polypheny.db.notebooks.model.JupyterSessionManager;
 import org.polypheny.db.plugins.PluginContext;
 import org.polypheny.db.plugins.PolyPlugin;
 import org.polypheny.db.transaction.TransactionManager;
 import org.polypheny.db.webui.ConfigService.HandlerType;
-import org.polypheny.db.webui.Crud;
 import org.polypheny.db.webui.HttpServer;
 
 @Slf4j
@@ -123,7 +122,7 @@ public class NotebooksPlugin extends PolyPlugin {
 
 
     private void getDockerInstances( Context ctx ) {
-        List<Map<String, Object>> result = DockerManager.getInstance().getDockerInstances().values().stream().filter( DockerInstance::isConnected ).map( DockerInstance::getMap ).collect( Collectors.toList() );
+        List<DockerInstanceInfo> result = DockerManager.getInstance().getDockerInstances().values().stream().map( DockerInstance::getInfo ).filter( DockerInstanceInfo::connected ).toList();
         ctx.status( 200 ).json( result );
     }
 
@@ -200,7 +199,7 @@ public class NotebooksPlugin extends PolyPlugin {
     }
 
 
-    public void pluginStatus( Context ctx, Crud crud ) {
+    public void pluginStatus( Context ctx ) {
         if ( pluginLoaded ) {
             ctx.status( 200 );
         } else {
