@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.polypheny.db.sql.language.ddl.altertable;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.polypheny.db.catalog.entity.logical.LogicalTable;
 import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.catalog.logistic.EntityType;
@@ -94,8 +93,9 @@ public class SqlAlterTableAddUniqueConstraint extends SqlAlterTable {
 
         DdlManager.getInstance().createUniqueConstraint(
                 logicalTable,
-                columnList.getList().stream().map( Node::toString ).collect( Collectors.toList() ),
-                constraintName.getSimple() );
+                columnList.getList().stream().map( Node::toString ).toList(),
+                constraintName.getSimple(),
+                statement );
     }
 
 }
