@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,8 +19,8 @@ package org.polypheny.db.webui.models;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Value;
+import org.polypheny.db.catalog.Catalog;
 import org.polypheny.db.catalog.entity.allocation.AllocationColumn;
 import org.polypheny.db.catalog.entity.allocation.AllocationEntity;
 import org.polypheny.db.catalog.logistic.EntityType;
@@ -53,7 +53,7 @@ public class PlacementModel {
 
 
     public PlacementModel addAdapter( final RelationalStore s ) {
-        if ( s.columnPlacements.size() > 0 ) {
+        if ( !s.columnPlacements.isEmpty() ) {
             this.stores.add( s );
         }
         return this;
@@ -105,7 +105,7 @@ public class PlacementModel {
                 final long numPartitions,
                 final PartitionType partitionType ) {
             super( uniqueName, adapterName );
-            this.columnPlacements = columnPlacements.stream().map( ColumnPlacement::new ).collect( Collectors.toList() );
+            this.columnPlacements = columnPlacements.stream().map( ColumnPlacement::new ).toList();
             this.partitionKeys = partitionKeys;
             this.numPartitions = numPartitions;
             this.partitionType = partitionType;
@@ -124,7 +124,7 @@ public class PlacementModel {
 
         public GraphStore( String uniqueName, String adapterName, List<AllocationEntity> allocs, boolean isNative ) {
             super( uniqueName, adapterName );
-            this.placements = allocs.stream().map( p -> new GraphPlacement( p.id, p.adapterId ) ).collect( Collectors.toList() );
+            this.placements = allocs.stream().map( p -> new GraphPlacement( p.id, p.adapterId ) ).toList();
             this.isNative = isNative;
         }
 
@@ -141,7 +141,7 @@ public class PlacementModel {
 
         public DocumentStore( String uniqueName, String adapterName, List<AllocationEntity> allocations, boolean isNative ) {
             super( uniqueName, adapterName );
-            this.placements = allocations.stream().map( p -> new CollectionPlacement( p.id, p.adapterId ) ).collect( Collectors.toList() );
+            this.placements = allocations.stream().map( p -> new CollectionPlacement( p.id, p.adapterId ) ).toList();
             this.isNative = isNative;
         }
 
@@ -191,7 +191,7 @@ public class PlacementModel {
 
         public ColumnPlacement( AllocationColumn allocationColumn ) {
             this.tableId = allocationColumn.logicalTableId;
-            this.tableName = allocationColumn.getLogicalTableName();
+            this.tableName = Catalog.snapshot().getLogicalEntity( allocationColumn.logicalTableId ).orElseThrow().name;
             this.columnId = allocationColumn.columnId;
             this.columnName = allocationColumn.getLogicalColumnName();
             this.storeId = (int) allocationColumn.adapterId;
